--- a/app/src/main/res/layout/activity_custom_game.xml
+++ b/app/src/main/res/layout/activity_custom_game.xml
@@ -4,13 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     tools:context=".CustomGameActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtCustomGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="custom g"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="230dp" />
+        android:layout_marginTop="32dp"
+        android:text="Custom Game"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:hint="Steps to finish"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtCustomGame" />
+
+    <Button
+        android:id="@+id/btnStartCustomGame"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Start"
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+
+    <Button
+        android:id="@+id/StartAIPlay"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:text="Watch AI Play"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="@+id/btnStartCustomGame"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnStartCustomGame" />
 </androidx.constraintlayout.widget.ConstraintLayout>
