pictures to "drawable" icons to "mipmap" (changed pictures dir)

--- a/app/src/main/res/layout/activity_random_game.xml
+++ b/app/src/main/res/layout/activity_random_game.xml
@@ -15,7 +15,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@mipmap/nr1" />
+        android:src="@drawable/nr1" />
 
     <ImageView
         android:id="@+id/imgView12"
@@ -23,7 +23,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView11"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@mipmap/nr15" />
+        android:src="@drawable/nr15" />
 
     <ImageView
         android:id="@+id/imgView13"
@@ -31,7 +31,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView12"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@mipmap/nr8" />
+        android:src="@drawable/nr8" />
 
     <ImageView
         android:id="@+id/imgView14"
@@ -39,7 +39,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView13"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@mipmap/nr4" />
+        android:src="@drawable/nr4" />
 
     <ImageView
         android:id="@+id/imgView21"
@@ -47,7 +47,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgView11"
-        android:src="@mipmap/nr11" />
+        android:src="@drawable/nr11" />
 
     <ImageView
         android:id="@+id/imgView22"
@@ -55,7 +55,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView21"
         app:layout_constraintTop_toBottomOf="@+id/imgView12"
-        android:src="@mipmap/nr6" />
+        android:src="@drawable/nr6" />
 
     <ImageView
         android:id="@+id/imgView23"
@@ -63,7 +63,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView22"
         app:layout_constraintTop_toBottomOf="@+id/imgView13"
-        android:src="@mipmap/nr7" />
+        android:src="@drawable/nr7" />
 
     <ImageView
         android:id="@+id/imgView24"
@@ -71,7 +71,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView23"
         app:layout_constraintTop_toBottomOf="@+id/imgView14"
-        android:src="@mipmap/nr3" />
+        android:src="@drawable/nr3" />
 
     <ImageView
         android:id="@+id/imgView31"
@@ -79,7 +79,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgView21"
-        android:src="@mipmap/nr9" />
+        android:src="@drawable/nr9" />
 
     <ImageView
         android:id="@+id/imgView32"
@@ -87,7 +87,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView31"
         app:layout_constraintTop_toBottomOf="@+id/imgView22"
-        android:src="@mipmap/nr10" />
+        android:src="@drawable/nr10" />
 
     <ImageView
         android:id="@+id/imgView33"
@@ -95,7 +95,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView32"
         app:layout_constraintTop_toBottomOf="@+id/imgView23"
-        android:src="@mipmap/nr5" />
+        android:src="@drawable/nr5" />
 
     <ImageView
         android:id="@+id/imgView34"
@@ -103,7 +103,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView33"
         app:layout_constraintTop_toBottomOf="@+id/imgView24"
-        android:src="@mipmap/nr12" />
+        android:src="@drawable/nr12" />
 
     <ImageView
         android:id="@+id/imgView41"
@@ -111,7 +111,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgView31"
-        android:src="@mipmap/nr13" />
+        android:src="@drawable/nr13" />
 
     <ImageView
         android:id="@+id/imgView42"
@@ -119,7 +119,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView41"
         app:layout_constraintTop_toBottomOf="@+id/imgView32"
-        android:src="@mipmap/nr14" />
+        android:src="@drawable/nr14" />
 
     <ImageView
         android:id="@+id/imgView43"
@@ -127,7 +127,7 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView42"
         app:layout_constraintTop_toBottomOf="@+id/imgView33"
-        android:src="@mipmap/nr2" />
+        android:src="@drawable/nr2" />
 
     <ImageView
         android:id="@+id/imgView44"
@@ -135,6 +135,6 @@
         android:layout_height="90dp"
         app:layout_constraintStart_toEndOf="@+id/imgView43"
         app:layout_constraintTop_toBottomOf="@+id/imgView34"
-        android:src="@mipmap/empty" />
+        android:src="@drawable/empty" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
