--- a/app/src/main/res/layout/activity_random_game.xml
+++ b/app/src/main/res/layout/activity_random_game.xml
@@ -4,137 +4,172 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RandomGameActivity"
+    android:background="@color/gray"
     android:padding="10dp"
-    android:background="@color/gray">
+    tools:context=".RandomGameActivity">
 
 
-    <ImageView
-        android:id="@+id/imgView11"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/nr1" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/imgView12"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView11"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/nr15" />
 
-    <ImageView
-        android:id="@+id/imgView13"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView12"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/nr8" />
+        <ImageView
+            android:id="@+id/imgView11"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/nr1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgView14"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView13"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/nr4" />
+        <ImageView
+            android:id="@+id/imgView12"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:src="@drawable/nr15"
+            app:layout_constraintStart_toEndOf="@+id/imgView11"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgView21"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgView11"
-        android:src="@drawable/nr11" />
+        <ImageView
+            android:id="@+id/imgView13"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:src="@drawable/nr8"
+            app:layout_constraintStart_toEndOf="@+id/imgView12"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgView22"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView21"
-        app:layout_constraintTop_toBottomOf="@+id/imgView12"
-        android:src="@drawable/nr6" />
+        <ImageView
+            android:id="@+id/imgView14"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:src="@drawable/nr4"
+            app:layout_constraintStart_toEndOf="@+id/imgView13"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgView23"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView22"
-        app:layout_constraintTop_toBottomOf="@+id/imgView13"
-        android:src="@drawable/nr7" />
+        <ImageView
+            android:id="@+id/imgView21"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr11"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgView11" />
 
-    <ImageView
-        android:id="@+id/imgView24"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView23"
-        app:layout_constraintTop_toBottomOf="@+id/imgView14"
-        android:src="@drawable/nr3" />
+        <ImageView
+            android:id="@+id/imgView22"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr6"
+            app:layout_constraintStart_toEndOf="@+id/imgView21"
+            app:layout_constraintTop_toBottomOf="@+id/imgView12" />
 
-    <ImageView
-        android:id="@+id/imgView31"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgView21"
-        android:src="@drawable/nr9" />
+        <ImageView
+            android:id="@+id/imgView23"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr7"
+            app:layout_constraintStart_toEndOf="@+id/imgView22"
+            app:layout_constraintTop_toBottomOf="@+id/imgView13" />
 
-    <ImageView
-        android:id="@+id/imgView32"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView31"
-        app:layout_constraintTop_toBottomOf="@+id/imgView22"
-        android:src="@drawable/nr10" />
+        <ImageView
+            android:id="@+id/imgView24"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr3"
+            app:layout_constraintStart_toEndOf="@+id/imgView23"
+            app:layout_constraintTop_toBottomOf="@+id/imgView14" />
 
-    <ImageView
-        android:id="@+id/imgView33"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView32"
-        app:layout_constraintTop_toBottomOf="@+id/imgView23"
-        android:src="@drawable/nr5" />
+        <ImageView
+            android:id="@+id/imgView31"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgView21" />
 
-    <ImageView
-        android:id="@+id/imgView34"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView33"
-        app:layout_constraintTop_toBottomOf="@+id/imgView24"
-        android:src="@drawable/nr12" />
+        <ImageView
+            android:id="@+id/imgView32"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr10"
+            app:layout_constraintStart_toEndOf="@+id/imgView31"
+            app:layout_constraintTop_toBottomOf="@+id/imgView22" />
 
-    <ImageView
-        android:id="@+id/imgView41"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgView31"
-        android:src="@drawable/nr13" />
+        <ImageView
+            android:id="@+id/imgView33"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr5"
+            app:layout_constraintStart_toEndOf="@+id/imgView32"
+            app:layout_constraintTop_toBottomOf="@+id/imgView23" />
 
-    <ImageView
-        android:id="@+id/imgView42"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView41"
-        app:layout_constraintTop_toBottomOf="@+id/imgView32"
-        android:src="@drawable/nr14" />
+        <ImageView
+            android:id="@+id/imgView34"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr12"
+            app:layout_constraintStart_toEndOf="@+id/imgView33"
+            app:layout_constraintTop_toBottomOf="@+id/imgView24" />
 
-    <ImageView
-        android:id="@+id/imgView43"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView42"
-        app:layout_constraintTop_toBottomOf="@+id/imgView33"
-        android:src="@drawable/nr2" />
+        <ImageView
+            android:id="@+id/imgView41"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr13"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgView31" />
 
-    <ImageView
-        android:id="@+id/imgView44"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:layout_constraintStart_toEndOf="@+id/imgView43"
-        app:layout_constraintTop_toBottomOf="@+id/imgView34"
-        android:src="@drawable/empty" />
+        <ImageView
+            android:id="@+id/imgView42"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr14"
+            app:layout_constraintStart_toEndOf="@+id/imgView41"
+            app:layout_constraintTop_toBottomOf="@+id/imgView32" />
+
+        <ImageView
+            android:id="@+id/imgView43"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/nr2"
+            app:layout_constraintStart_toEndOf="@+id/imgView42"
+            app:layout_constraintTop_toBottomOf="@+id/imgView33" />
+
+        <ImageView
+            android:id="@+id/imgView44"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/empty"
+            app:layout_constraintStart_toEndOf="@+id/imgView43"
+            app:layout_constraintTop_toBottomOf="@+id/imgView34" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
