Partly changed hardcoded strings and translated them. Modified game window layout, because on my device some elements were overlaying

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:width="200dp"
-        android:text="Random Game"
+        android:text="@string/random_game"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:width="200dp"
-        android:text="Custom Game"
+        android:text="@string/custom_game"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -48,7 +48,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:width="200dp"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
