--- a/app/src/main/res/layout/activity_custom_game.xml
+++ b/app/src/main/res/layout/activity_custom_game.xml
@@ -9,11 +9,11 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="146dp"
-        android:layout_height="41dp"
+        android:layout_width="100dp"
+        android:layout_height="39dp"
         android:layout_marginTop="88dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -24,11 +24,11 @@
         android:id="@+id/StartAIPlay"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Watch AI Play"
+        android:layout_marginTop="24dp"
+        android:text="@string/watch_ai"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnStartCustomGame" />
 
@@ -37,7 +37,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Start"
+        android:text="@string/start"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="124dp"
-        android:text="Steps to finish:"
+        android:text="@string/steps_to_finish"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Custom Game"
+        android:text="@string/custom_game"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
