Random/Custom game $ Main Menu. Layout changes after rotating phone. Settings added scrollable view.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#FF2E47</item>
         <item name="colorPrimaryVariant">#B30000</item>
-        <item name="colorOnPrimary">@color/gray</item>
+        <item name="colorOnPrimary">#000000</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#6FDA03</item>
         <item name="colorSecondaryVariant">#548701</item>
