--- a/app/src/main/res/layout/fragment_settings_tab_game.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_game.xml
@@ -1,67 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/txtLanguages"
-        android:layout_width="120dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/language"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:padding="20dp">
 
-    <Spinner
-        android:id="@+id/spnCountry"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:entries="@array/languages"
-        app:layout_constraintBottom_toBottomOf="@+id/txtLanguages"
-        app:layout_constraintStart_toEndOf="@+id/txtLanguages"
-        app:layout_constraintTop_toTopOf="@+id/txtLanguages" />
+        <TextView
+            android:id="@+id/txtLanguages"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/language"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txtCardStyle"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/card_style"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtAnimationSpeed" />
+        <Spinner
+            android:id="@+id/spnCountry"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:entries="@array/languages"
+            app:layout_constraintBottom_toBottomOf="@+id/txtLanguages"
+            app:layout_constraintStart_toEndOf="@+id/txtLanguages"
+            app:layout_constraintTop_toTopOf="@+id/txtLanguages" />
 
-    <Spinner
-        android:id="@+id/spnCardStyle"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:entries="@array/cardStyle"
-        app:layout_constraintBottom_toBottomOf="@+id/txtCardStyle"
-        app:layout_constraintStart_toEndOf="@+id/txtCardStyle"
-        app:layout_constraintTop_toTopOf="@+id/txtCardStyle" />
+        <TextView
+            android:id="@+id/txtCardStyle"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/card_style"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtAnimationSpeed" />
 
-    <TextView
-        android:id="@+id/txtAnimationSpeed"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Animation Speed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLanguages" />
+        <Spinner
+            android:id="@+id/spnCardStyle"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:entries="@array/cardStyle"
+            app:layout_constraintBottom_toBottomOf="@+id/txtCardStyle"
+            app:layout_constraintStart_toEndOf="@+id/txtCardStyle"
+            app:layout_constraintTop_toTopOf="@+id/txtCardStyle" />
 
-    <Spinner
-        android:id="@+id/spnAnimationSpeed"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:entries="@array/animationSpeed"
-        app:layout_constraintBottom_toBottomOf="@+id/txtAnimationSpeed"
-        app:layout_constraintStart_toEndOf="@+id/txtAnimationSpeed"
-        app:layout_constraintTop_toTopOf="@+id/txtAnimationSpeed" />
+        <TextView
+            android:id="@+id/txtAnimationSpeed"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Animation Speed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtLanguages" />
 
+        <Spinner
+            android:id="@+id/spnAnimationSpeed"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:entries="@array/animationSpeed"
+            app:layout_constraintBottom_toBottomOf="@+id/txtAnimationSpeed"
+            app:layout_constraintStart_toEndOf="@+id/txtAnimationSpeed"
+            app:layout_constraintTop_toTopOf="@+id/txtAnimationSpeed" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
