--- a/app/src/main/res/layout/fragment_settings_tab_graphics.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_graphics.xml
@@ -1,48 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="wrap_content">
 
-
-    <TextView
-        android:id="@+id/txtCardBackground"
-        android:layout_width="120dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Card Background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtColorTheme" />
+        android:padding="20dp">
 
-    <Spinner
-        android:id="@+id/spnCardBackground"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:entries="@array/cardBackground"
-        app:layout_constraintBottom_toBottomOf="@+id/txtCardBackground"
-        app:layout_constraintStart_toEndOf="@+id/txtCardBackground"
-        app:layout_constraintTop_toTopOf="@+id/txtCardBackground" />
+        <TextView
+            android:id="@+id/txtCardBackground"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Card Background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtColorTheme" />
 
-    <TextView
-        android:id="@+id/txtColorTheme"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Color Theme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Spinner
+            android:id="@+id/spnCardBackground"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:entries="@array/cardBackground"
+            app:layout_constraintBottom_toBottomOf="@+id/txtCardBackground"
+            app:layout_constraintStart_toEndOf="@+id/txtCardBackground"
+            app:layout_constraintTop_toTopOf="@+id/txtCardBackground" />
 
-    <Spinner
-        android:id="@+id/spnColorTheme"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:entries="@array/colorTheme"
-        app:layout_constraintBottom_toBottomOf="@+id/txtColorTheme"
-        app:layout_constraintStart_toEndOf="@+id/txtColorTheme"
-        app:layout_constraintTop_toTopOf="@+id/txtColorTheme" />
+        <TextView
+            android:id="@+id/txtColorTheme"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Color Theme"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Spinner
+            android:id="@+id/spnColorTheme"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:entries="@array/colorTheme"
+            app:layout_constraintBottom_toBottomOf="@+id/txtColorTheme"
+            app:layout_constraintStart_toEndOf="@+id/txtColorTheme"
+            app:layout_constraintTop_toTopOf="@+id/txtColorTheme" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
