--- a/app/src/main/res/layout/activity_win_screen.xml
+++ b/app/src/main/res/layout/activity_win_screen.xml
@@ -20,7 +20,7 @@
         android:id="@+id/btnWinBack"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Main Menu"
+        android:text="@string/MainMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
