--- a/app/src/main/res/layout/fragment_settings_tab_game.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_game.xml
@@ -53,7 +53,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Animation Speed"
+            android:text="@string/animation"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtLanguages" />
 
