--- a/app/src/main/res/layout/fragment_settings_tab_graphics.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_graphics.xml
@@ -15,7 +15,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Card Background"
+            android:text="@string/CardBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtColorTheme" />
 
@@ -34,7 +34,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Color Theme"
+            android:text="@string/ColorTheme"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
