--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AboutActivity"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="?attr/backgroundColor">
 
 
     <TextView
