--- a/app/src/main/res/layout/activity_custom_game.xml
+++ b/app/src/main/res/layout/activity_custom_game.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".CustomGameActivity">
+    tools:context=".CustomGameActivity"
+    android:background="?attr/backgroundColor">
 
     <Spinner
         android:id="@+id/imageSpinner"
