--- a/app/src/main/res/layout/activity_high_score_view.xml
+++ b/app/src/main/res/layout/activity_high_score_view.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".HighScoreViewActivity">
+    tools:context=".HighScoreViewActivity"
+    android:background="?attr/backgroundColor">
 
     <TableLayout
         android:id="@+id/tableHighScore"
