--- a/app/src/main/res/layout/activity_win_screen.xml
+++ b/app/src/main/res/layout/activity_win_screen.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WinScreen">
+    tools:context=".WinScreen"
+    android:background="?attr/backgroundColor">
 
     <TextView
         android:id="@+id/txtWinnScreen"
