--- a/app/src/main/res/layout/activity_custom_game.xml
+++ b/app/src/main/res/layout/activity_custom_game.xml
@@ -114,5 +114,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CardStyletxt" />
 
+    <Button
+        android:id="@+id/btnCustomGameToMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="2dp"
+        android:text="@string/MainMenu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
